--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,101 @@
+atomicwrites==1.3.0
+attrs==19.3.0
+backcall==0.1.0
+bintrees==2.1.0
+bleach==3.1.0
 certifi==2020.4.5.1
 cffi==1.14.0
+chardet==3.0.4
+chart-studio==1.1.0
+cloudpickle==1.3.0
+colorama==0.4.3
 cycler==0.10.0
+cytoolz==0.10.1
+dask==2.14.0
 decorator==4.4.2
-face-alignment==1.0.0
+defusedxml==0.6.0
+entrypoints==0.3
+face-alignment==1.0.1
+glob2==0.7
+idna==2.9
 imageio==2.8.0
+importlib-metadata==1.5.0
+ipykernel==5.1.4
+ipython==7.12.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.16.0
+Jinja2==2.11.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.1.0
+jupyter-core==4.6.1
 kiwisolver==1.2.0
+Mako==1.1.1
+MarkupSafe==1.1.1
 matplotlib==3.2.1
+mistune==0.8.4
 mkl-fft==1.0.15
 mkl-random==1.1.0
 mkl-service==2.3.0
+more-itertools==8.2.0
+nbconvert==5.6.1
+nbformat==5.0.4
 networkx==2.4
-numpy==1.18.3
+notebook==6.0.3
+numpy==1.18.1
 olefile==0.46
+opencv-contrib-python==4.2.0.34
 opencv-python==4.2.0.34
-opencv-python-headless==4.1.1.26
-Pillow==7.1.1
+packaging==20.1
+pandas==1.0.0
+pandocfilters==1.4.2
+parse==1.14.0
+parse-type==0.5.2
+parso==0.6.1
+pathlib==1.0.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.0.0
+plotly==4.6.0
+pluggy==0.13.1
+prometheus-client==0.7.1
+prompt-toolkit==3.0.3
+ptyprocess==0.6.0
+py==1.8.1
 pycparser==2.20
-pyparsing==2.4.7
+Pygments==2.5.2
+pyparsing==2.4.6
+pyrsistent==0.15.7
+pytest==5.3.5
+pytest-bdd==3.2.1
 python-dateutil==2.8.1
+pytz==2019.3
 PyWavelets==1.1.1
+pywin32==227
+pywinpty==0.5.7
 PyYAML==5.3.1
+pyzmq==18.1.1
+qtconsole==4.6.0
+requests==2.23.0
+retrying==1.3.3
 scikit-image==0.16.2
 scipy==1.4.1
+seaborn==0.10.0
+Send2Trash==1.5.0
 six==1.14.0
+terminado==0.8.3
+testpath==0.4.4
+toolz==0.10.0
 torch==1.4.0
 torchvision==0.5.0
-tqdm==4.45.0
+tornado==6.0.4
+tqdm==4.44.1
+traitlets==4.3.3
+urllib3==1.25.9
+wcwidth==0.1.8
+webencodings==0.5.1
+widgetsnbextension==3.5.1
 wincertstore==0.2
+zipp==2.1.0
